pkg/lang/testdata/ub/config/valid/input-list-and-map.ub
inputs: { ports: [80, 443], tags: { env: 'prod' } }
