pkg/lang/testdata/ub/config/invalid/pin-entry-not-object.ub
factory: { pin: { supported-versions: ['v1'] } }
